# FoodManagementSystem

./: CMakeLists.txt  CMakeLists.txt.user.25f6272  CMakeLists.txt.user.75fb5ba  FoodManagementSystem.db  README.md  addingredient.cpp  addingredient.cpp.autosave  addingredient.h  addingredient.ui  addrecipe.cpp  addrecipe.h  addrecipe.ui  addtoshoppinglist.cpp  addtoshoppinglist.h  addtoshoppinglist.ui  addtostorage.cpp  addtostorage.h  addtostorage.ui  databaseheader.h  ingredient.cpp  ingredient.h  ingredient.ui  list.cpp  list.h  list.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  marketpurchasing.cpp  marketpurchasing.h  mealplan.cpp  mealplan.h  mealplan.ui  onlineshopping.cpp  onlineshopping.h  recipe.cpp  recipe.h  recipe.ui  removefromshoppinglist.cpp  (+18 more)
Tests/: CMakeLists.txt  tst_addingredient.cpp  tst_addrecipe.cpp  tst_ingredient.cpp  tst_mealplan.cpp  tst_recipe.cpp  tst_removeingredient.cpp  tst_removerecipe.cpp  tst_storage.cpp
